--- a/DSL/Ruuter.public/GET/calendar/national-holidays/ytd.yml
+++ b/DSL/Ruuter.public/GET/calendar/national-holidays/ytd.yml
@@ -1,74 +1,50 @@
 declaration:
   call: declare
   version: 0.1
-  name: "Filter Holidays Year-to-Date"
-  description: "This service filters holidays for the current year-to-date"
+  name: "YTD Year-to-Date"
+  description: "This service returns national holidays from start of the year to today"
   method: GET
   accepts: JSON
   returns: JSON
+  namespace: common-services
   allowlist:
     body:
-    - field: chatId
-      type: string
-      description: "The chat ID for the message"
-    - field: authorId
-      type: string
-      description: "The author ID for the message"
-    - field: today
-      type: string
-      description: "The current date in ISO format - ex. 'yyyy-mm-dd'"
-    - field: yearStart
-      type: string
-      description: "The start of the year in ISO format - ex. 'yyyy-mm-dd'"
+      - field: chatId
+        type: string
+        description: "The chat ID for the message"
+      - field: authorId
+        type: string
+        description: "The author ID for the message"
 
 prepare:
   assign:
     chatId: ${incoming.params.chatId}
     authorId: ${incoming.params.authorId}
-    today: ${new Date().toISOString().split("T")[0]}
-    yearStart: ${today.split("-")[0] + "-01-01"}
+    endDate: ${new Date().toISOString().split("T")[0]}
+    startDate: ${endDate.split("-")[0] + "-01-01"}
   next: makeApiCall
 
 makeApiCall:
-  call: reflect.mock
+  call: http.get
   args:
-    url: "www.example.com"
-    response: 
-      holidays:
-        # --- Riigipühad ja puhkepäevad 2024 ---
-        - date: "2024-01-01"
-          name: "uusaasta"
-        - date: "2024-02-24"
-          name: "iseseisvuspäev, Eesti Vabariigi aastapäev"
-        - date: "2024-03-29"
-          name: "suur reede"
-        - date: "2024-03-31"
-          name: "ülestõusmispühade 1. püha"
-        - date: "2024-05-01"
-          name: "kevadpüha"
-        - date: "2024-05-19"
-          name: "nelipühade 1. püha"
-        - date: "2024-06-23"
-          name: "võidupüha"
-        - date: "2024-06-24"
-          name: "jaanipäev"
-        - date: "2024-08-20"
-          name: "taasiseseisvumispäev"
-        - date: "2024-12-24"
-          name: "jõululaupäev"
-        - date: "2024-12-25"
-          name: "esimene jõulupüha"
-        - date: "2024-12-26"
-          name: "teine jõulupüha"
-  result: holidayData
-  next: validateHolidaysYTD
+    url: https://openholidaysapi.org/PublicHolidays?countryIsoCode=EE&languageIsoCode=EE&validFrom=${startDate}&validTo=${endDate}
+    headers:
+      accept: application/json
+  result: holidays
+  next: checkHolidays
 
-validateHolidaysYTD:
-  assign:
-    holidaysYTD: ${holidayData.response.body.holidays
-        .filter(holiday => holiday.date >= yearStart && holiday.date <= today)
-        .sort((a, b) => new Date(a.date) - new Date(b.date))}
+checkHolidays:
+  switch:
+    - condition: ${holidays.response.body.length == 0}
+      next: assignNoHolidays
   next: formatResult
+
+assignNoHolidays:
+  assign:
+    res: {
+      "result": "No national holidays found"
+      }
+  next: formatMessages
 
 formatResult:
   call: http.post
@@ -77,7 +53,7 @@ formatResult:
     headers:
       type: json
     body:
-      data: ${holidaysYTD}
+      data: ${holidays.response.body}
   result: formattedHolidays
   next: assignResponse
 
