--- a/DSL/Ruuter.public/GET/calendar/national-holidays/find/by-name.yml
+++ b/DSL/Ruuter.public/GET/calendar/national-holidays/find/by-name.yml
@@ -1,12 +1,11 @@
 declaration:
   call: declare
   version: 0.1
-  name: "Holiday Search Service"
-  description: "Searches for a national holiday by name in the 2024 calendar"
+  name: "By Name"
+  description: "Searches for a national holiday by name"
   method: GET
   accepts: JSON
   returns: JSON
-  namespace: common-services
   allowlist:
     body:
     - field: chatId
@@ -17,56 +16,35 @@ declaration:
       description: "The author ID for the message"
     - field: holidayName
       type: string
-      description: "Holiday name for which to retrieve holidays - string - ex. 'jaanipäev'"
+      description: "The holiday name to search for"
 
 prepare:
   assign:
     chatId: ${incoming.params.chatId}
     authorId: ${incoming.params.authorId}
-    holidayName: ${incoming.params.input.split(",")[0]}
+    holidayName: ${incoming.params.input}
+    currentYear: ${new Date().toISOString().split("T")[0].slice(0,4)}
+    startDate: ${currentYear + "-01-01"}
+    endDate: ${currentYear + "-12-31"}
   next: makeApiCall
 
 makeApiCall:
-  call: reflect.mock
+  call: http.get
   args:
-    url: "www.example.com"
-    response: 
-      holidays:
-        - date: "2024-01-01"
-          name: "uusaasta"
-        - date: "2024-02-24"
-          name: "iseseisvuspäev, Eesti Vabariigi aastapäev"
-        - date: "2024-03-29"
-          name: "suur reede"
-        - date: "2024-03-31"
-          name: "ülestõusmispühade 1. püha"
-        - date: "2024-05-01"
-          name: "kevadpüha"
-        - date: "2024-05-19"
-          name: "nelipühade 1. püha"
-        - date: "2024-06-23"
-          name: "võidupüha"
-        - date: "2024-06-24"
-          name: "jaanipäev"
-        - date: "2024-08-20"
-          name: "taasiseseisvumispäev"
-        - date: "2024-12-24"
-          name: "jõululaupäev"
-        - date: "2024-12-25"
-          name: "esimene jõulupüha"
-        - date: "2024-12-26"
-          name: "teine jõulupüha"
-  result: data
+    url: https://openholidaysapi.org/PublicHolidays?countryIsoCode=EE&languageIsoCode=EE&validFrom=${startDate}&validTo=${endDate}
+    headers:
+      accept: application/json
+  result: holidays
   next: filterHolidays
 
 filterHolidays:
   assign:
-    filteredHolidays: ${data.response.body.holidays.filter(holiday => holiday.name.toLowerCase().includes(holidayName.toLowerCase()))}
+    filteredHolidays: ${holidays.response.body.filter(holiday => holiday.name[0].text.toLowerCase().includes(holidayName.toLowerCase()))}
   next: checkHoliday
 
 checkHoliday:
   switch:
-    - condition: ${filteredHolidays.length < 1}
+    - condition: ${filteredHolidays.length == 0}
       next: holidayNotFound
   next: formatResponse
 
@@ -84,10 +62,7 @@ formatResponse:
     headers:
       type: json
     body:
-      data: {
-        "name": "${filteredHolidays[0].name.charAt(0).toUpperCase() + filteredHolidays[0].name.slice(1)}",
-        "date": "${filteredHolidays[0].date}"
-      }
+      data: ${filteredHolidays}
   result: formatResponse
   next: assignValue
 
