--- a/DSL/Ruuter.public/GET/calendar/national-holidays/next.yml
+++ b/DSL/Ruuter.public/GET/calendar/national-holidays/next.yml
@@ -1,8 +1,8 @@
 declaration:
   call: declare
   version: 0.1
-  name: "Find Upcoming Holiday"
-  description: "Returns the next upcoming national holiday from today's date"
+  name: "Next"
+  description: "This service returns the next upcoming national holiday "
   method: GET
   accepts: JSON
   returns: JSON
@@ -14,55 +14,27 @@ declaration:
     - field: authorId
       type: string
       description: "The author ID for the message"
-    - field: today
-      type: string
-      description: "The current date in ISO format - ex. 'yyyy-mm-dd'"
 
 prepare:
   assign:
     chatId: ${incoming.params.chatId}
     authorId: ${incoming.params.authorId}
-    today: ${new Date(new Date().setDate(new Date().getDate() + 1)).toISOString().split("T")[0]}
+    startDate: ${new Date().toISOString().split("T")[0]}
+    endDate: ${new Date(new Date().setMonth(new Date().getMonth() + 4)).toISOString().split("T")[0]}
   next: makeApiCall
 
 makeApiCall:
-  call: reflect.mock
+  call: http.get
   args:
-    url: "www.example.com"
-    response: 
-      holidays:
-        # --- Riigipühad ja puhkepäevad 2024 ---
-        - date: "2024-01-01"
-          name: "uusaasta"
-        - date: "2024-02-24"
-          name: "iseseisvuspäev, Eesti Vabariigi aastapäev"
-        - date: "2024-03-29"
-          name: "suur reede"
-        - date: "2024-03-31"
-          name: "ülestõusmispühade 1. püha"
-        - date: "2024-05-01"
-          name: "kevadpüha"
-        - date: "2024-05-19"
-          name: "nelipühade 1. püha"
-        - date: "2024-06-23"
-          name: "võidupüha"
-        - date: "2024-06-24"
-          name: "jaanipäev"
-        - date: "2024-08-20"
-          name: "taasiseseisvumispäev"
-        - date: "2024-12-24"
-          name: "jõululaupäev"
-        - date: "2024-12-25"
-          name: "esimene jõulupüha"
-        - date: "2024-12-26"
-          name: "teine jõulupüha"
-  result: holiday_data
-  next: validateHoliday
+    url: https://openholidaysapi.org/PublicHolidays?countryIsoCode=EE&languageIsoCode=EE&validFrom=${startDate}&validTo=${endDate}
+    headers:
+      accept: application/json
+  result: holidays
+  next: filterHolidays
 
-validateHoliday:
+filterHolidays:
   assign:
-    upcomingHoliday: ${holiday_data.response.body.holidays
-        .filter(holiday => holiday.date >= today).sort((a, b) => new Date(a.date) - new Date(b.date))[0]}
+    nextHoliday: ${holidays.response.body.find(holiday => holiday.startDate > startDate)}
   next: formatResponse
 
 formatResponse:
@@ -72,13 +44,13 @@ formatResponse:
     headers:
       type: json
     body:
-      data: ${upcomingHoliday}
+      data: ${nextHoliday}
   result: formatMessage
   next: assignResponse
 
 assignResponse:
   assign:
-    res: ${formatMessage.response.body}
+    res: "${formatMessage.response.body}"
   next: formatMessages
 
 formatMessages:
