holiday name mapping (#229) (#230)
Co-authored-by: Mati Kljukin <matik@matik-5420.ria.ee>

--- a/DSL/Ruuter.public/GET/calendar/school-holidays/find/by-name.yml
+++ b/DSL/Ruuter.public/GET/calendar/school-holidays/find/by-name.yml
@@ -23,7 +23,15 @@ prepare:
   assign:
     chatId: ${incoming.params.chatId}
     authorId: ${incoming.params.authorId}
-    searchHoliday: ${incoming.params.input}
+    holiday: ${incoming.params.input}
+    holidayMap:
+      map:
+        "talve koolivaheaeg": "talvepuhkus"
+        "kevad koolivaheaeg": "kevadpühad"
+        "suve koolivaheaeg": "suvepuhkus"
+        "jõulu koolivaheaeg": "jõulupühad"
+        "sügis koolivaheaeg": "sügispuhkus"
+    searchHoliday: ${holidayMap.map[holiday]}
     currentYear: "${new Date().getFullYear()}"
     startDate: "${new Date(new Date().getFullYear(), 0, 1).toISOString().split('T')[0]}" # January 1st of the current year
     endDate: "${new Date(new Date().getFullYear(), 11, 31).toISOString().split('T')[0]}" # December 31st of the current year
